--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
         "livewire/volt": "^1.7.0",
+        "maatwebsite/excel": "^1.1",
         "spatie/laravel-permission": "^6.23"
     },
     "require-dev": {
