--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "livewire/livewire": "^3.6",
         "livewire/volt": "^1.7.0",
         "maatwebsite/excel": "^1.1",
+        "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.23"
     },
     "require-dev": {
